# UTM-TMPS-LABS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Lab1/: CMakeLists.txt  README.md  main.cpp
Lab1/domain/models/: EShop.h  LandingPage.h  Portfolio.h  Website.h
Lab1/infrastructure/: WebBuilder.h  WebFactory.h
Lab1/service/: Consumer.h  ITDepartment.h
domain/models/: ComposedWeb.h  LandingPage.h
domain/models/Deployment/: AWS.h  Deployment.h  DigitalOcean.h  GCP.h
domain/models/WebSite/: ComposedWeb.h  EShop.h  LandingPage.h  Portfolio.h  Website.h
infrastructure/: WebBuilder.h  WebFactory.h
service/: Consumer.h  ITDepartment.h  WebAggregator.h
